--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -92,6 +92,15 @@
 </section>
     {% block content %}
             {% endblock %}
+ {% block footer %}
+<footer>
+  <p><br>
+  <a href="/about">About</a></p>
+</footer>
+   {%- endblock %}
 </body>
 
+
 </html>
+
+
