--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -17,12 +17,12 @@
           style="border-radius:50%">
       </div>
       <div class="productdesc">
-<h1 class="title">
+    <h1 class="title">
 
-    This is the page of User: {{ current_user.name }}!
-
+        This is the page of User: {{ current_user.name }}!
+    </h1>
   {% endif %}
-    <div>
-</h1>
+        </div>
+
 </body>
 {% endblock %}
