--- a/project/templates/custom_search.html
+++ b/project/templates/custom_search.html
@@ -7,10 +7,19 @@
 <form action="/searchgmahbycity" method="POST" class="customesearch">
     <input type="search" name="search" id="search" placeholder="Search Anything Here..." class="form-control">
 </form>
+
+
 <h2 class="headersearch">Search Gmah By Category</h2>
 <form action="/searchgmahbycategory" method="POST" class="customesearch">
-    <input type="search" name="search" id="search" placeholder="Search Anything Here..." class="form-control">
+  <label for="search">Choose a category:</label>
+  <select id="search" name="search" size="1">
+     {% for category in categories %}
+    <option name="search" value={{category.category}}>{{category.category}}</option>
+    {% endfor %}
+  </select><br><br>
+  <input type="submit">
 </form>
+
 <h2 class="headersearch">Search Product</h2>
 <form action="/search" method="POST" class="customesearch">
     <input type="search" name="search" id="search" placeholder="Search Anything Here..." class="form-control">
