--- a/project/templates/gmah_signup.html
+++ b/project/templates/gmah_signup.html
@@ -61,7 +61,7 @@
     oninput="this.setCustomValidity('')" >
 
             <label for="profile"><b>Profile Picture</label>
-            <input type="file" id="file" name="file">
+            <input type="file" id="file" name="file" class="form-control">
 
             <div class="clearfix">
                 <button type="button" class="cancelbtn">Cancel</button>
