--- a/project/templates/my_products.html
+++ b/project/templates/my_products.html
@@ -1,21 +1,29 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2 class="homewelcome" style="text-align:center;">My Product List</h2>
-    <div class="eachproduct">
-    {% for product in products %}
-        {% if product.gmah_id == current_user.id %}
-        <p>Product Name: {{ product.name }}</p>
-        {% set imagename = product.pic_name %}
-        <img class="resultProductPhoto" src={{url_for('static',filename='images/products/{}'.format(imagename))}} width="150px" height="150px"><br><br>
-        {% if product.idle %}
-        <p style="color: green;">This Product is available</p>
-       {% else %}
-        <p style="color: red;" >This Product isnt available</p>
-       {% endif %}
-        {% endif %}
-    {% endfor %}
+<<h2 class="homewelcome" style="text-align:center;">{{header}}</h2>
+<div class="container">
+    <div class="row space">
+    {% for result in results %}
+<!--        -->
+        <div class="col-xs-4" style="border: 1px solid black;">
+          {% set imagename = result.pic_name %}
+          <div style="float:left;">
+              <img class="resultProductPhoto" src={{url_for('static',filename='images/products/{}'.format(imagename))}} width="180px" height="150px">
+                <p>Product Name: {{ result.name }}</p>
+          </div>
+            <div style="float:right; margin:10% 0 0 0">
+                {% if result.idle %}
+                <p style="color: green;">This Product is available</p>
+                <a class="btn btn-primary" href="{{ url_for('main.product_page', id=result.id) }}">Borrow</a> <br>
+               {% else %}
+                <p style="color: red;" >This Product isnt available</p>
+              {% endif %}
+            </div>
         </div>
+        {% endfor %}
+    </div>
+</div>
+<br><br><br><br><br><br><br>
 
 {% endblock %}
-
