--- a/project/templates/product_page.html
+++ b/project/templates/product_page.html
@@ -18,6 +18,7 @@
 </p>
 
 </div>
+{% if gmah.id!=current_user.id %}
     <div>
         <form action="/borrow_item" method="POST">
             <input type="date" name="start_date">
@@ -27,7 +28,7 @@
             <input type="text" name="gmah_id" value="{{ gmah.id }}" hidden>
             <input type="text" name="product_id" value="{{ product.id }}" hidden>
             <input type="submit">
-
+{% endif %}
         </form>
     </div>
 <br><br>
