--- a/project/templates/user_signup.html
+++ b/project/templates/user_signup.html
@@ -73,7 +73,7 @@
     oninput="this.setCustomValidity('')" >
 
             <label for="profile"><b>Profile Picture</label>
-            <input type="file" id="file" name="file">
+            <input type="file" id="file" name="file" class="form-control">
     <div class="clearfix">
       <button type="button" class="cancelbtn">Cancel</button>
       <button type="submit" class="signupbtn" >Sign Up</button>
