--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -46,6 +46,7 @@
                                 {% if current_user.owner_first_name %}
                                 <li><a href="/my_products">My Products</a></li>
                                 <li><a href="/borrows">My Borrows</a></li>
+                                <li><a href="/donations">Donation Center</a></li>
                                 {% endif %}
                             </ul>
                             <ul class="nav navbar-nav">
@@ -94,6 +95,7 @@
     {% block content %}
             {% endblock %}
  {% block footer %}
+<br><br><br><br>
 <footer>
   <p><br>
   <a href="/about">About</a></p>
