--- a/project/templates/donations.html
+++ b/project/templates/donations.html
@@ -11,10 +11,9 @@
       <br class=”blank” />
       {% if header=="Results Page" %}
         <p>Product Name: {{ result.name }}</p>
-        <p>Gmah City: {{ func(result.id) }}</p>
-        {% if result.idle %}
+       {% if result.is_available %}
         <p style="color: green;">This Product is available</p>
-      <a class="btn btn-primary" href="{{ url_for('main.product_page', id=result.id) }}">Borrow</a> <br>
+      <a class="btn btn-primary" href="{{ url_for('main.product_page', id=result.id) }}">Contact</a> <br>
        {% else %}
         <p style="color: red;" >This Product isnt available</p>
        {% endif %}
