--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -44,7 +44,7 @@
                                 </li>
                                 <li><a href="/search">Custom Search</a></li>
                                 {% if current_user.owner_first_name %}
-                                <li><a href="/my_products">My Products</a></li>
+<!--                                <li><a href="/my_products">My Products</a></li>-->
                                 <li><a href="/borrows">My Borrows</a></li>
                                 <li><a href="/donations">Donation Center</a></li>
                                 {% endif %}
