--- a/project/templates/gmah_signup.html
+++ b/project/templates/gmah_signup.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-    <body>
-    <form method="POST" action="/gmah_signup" class="centerform" enctype="multipart/form-data">
+<div class="column is-4 is-offset-4">
+    <div class="box">
+ <form method="POST" action="/gmah_signup" class="centerform" enctype="multipart/form-data">
         <div id="hidden_div">
             <br>
             <h1 class="textcenter">Sign Up as Gmah</h1>
@@ -69,6 +69,7 @@
             </div>
         </div>
     </form>
-    </body>
-    </html>
+    </div>
+</div>
+
 {% endblock %}
