--- a/project/templates/my_products.html
+++ b/project/templates/my_products.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<<h2 class="homewelcome" style="text-align:center;">{{header}}</h2>
+<h2 class="homewelcome" style="text-align:center;">{{header}}</h2>
 <div class="container">
     <div class="row space">
     {% for result in results %}
