--- a/project/templates/donate_items.html
+++ b/project/templates/donate_items.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="column is-4 is-offset-4">
+    <div class="box">
 <h2 style="text-align:center;">Donate Items</h2>
     <form action="/donate_items" method="POST" class="customesearch" enctype="multipart/form-data">
         <input type="text" name="user_id" value="{{ current_user.id }}" hidden>
@@ -14,7 +16,6 @@
         <input style="width:30%;" type="submit" class="form-control">
 
     </form>
-
-<br><br><br><br><br><br><br>
-
+    </div>
+</div>
 {% endblock %}
