--- a/project/templates/custom_search.html
+++ b/project/templates/custom_search.html
@@ -20,7 +20,7 @@
 </form>
 
 <h2 class="headersearch">Search Product</h2>
-<form action="/search" method="POST" class="customesearch">
+<form action="/searchforproduct" method="POST" class="customesearch">
     <input type="search" name="search" id="search" placeholder="Search Anything Here..." class="form-control">
 </form>
 
