--- a/project/templates/my_borrows.htm
+++ b/project/templates/my_borrows.htm
@@ -2,17 +2,17 @@
 
 {% block content %}
 <h2 class="homewelcome" style="text-align:center;">My Borrows</h2>
-<div class="container ">
+    <div class="container ">
     <div class="row">
          <h1 class="homewelcome" style="font-size:30px;text-align:center;">Starting Today</h1>
         {% for borrow in borrows %}
             {% if borrow.is_active==0 and borrow.approved==1 and func3(borrow.start_date) %}
                 <div class="col-lg-6" style="border: 1px solid black;">
-                     <div  style="margin:0 0 0 30%;">
+                     <div  style="float:left;margin:0 0 0 3%;">
                         {% set imagename = (func2(borrow.product_id)).pic_name %}
                         <img class="resultProductPhoto" src={{url_for('static',filename='images/products/{}'.format(imagename))}} width="180px" height="150px">
                    </div>
-                   <div style="margin:0 0 0 30%;">
+                   <div style="float:right ;margin:5% 15% 0 0;">
                        <p>Start Date:{{ borrow.start_date }}</p>
                        <p>End Date:{{ borrow.end_date }}</p>
                        <p>Borrower Name: {{ (func(borrow.borrower_id)).name }}</p>
@@ -29,11 +29,11 @@
         {% for borrow in borrows %}
             {% if borrow.is_active==1 and borrow.approved==1 and func3(borrow.end_date) %}
                 <div class="col-lg-6" style="border: 1px solid black;">
-                     <div  style="margin:0 0 0 30%;">
+                     <div  style="float:left;margin:0 0 0 3%;">
                         {% set imagename = (func2(borrow.product_id)).pic_name %}
                         <img class="resultProductPhoto" src={{url_for('static',filename='images/products/{}'.format(imagename))}} width="180px" height="150px">
                    </div>
-                   <div style="margin:0 0 0 30%;">
+                   <div style="float:right ;margin:5% 15% 0 0;">
                        <p>Start Date:{{ borrow.start_date }}</p>
                        <p>End Date:{{ borrow.end_date }}</p>
                        <p>Borrower Name: {{ (func(borrow.borrower_id)).name }}</p>
@@ -49,18 +49,19 @@
         <h1 class="homewelcome" style="font-size:30px;text-align:center;"> Active Borrows</h1>
         {% for borrow in borrows %}
             {% if borrow.approved==1 and borrow.is_active==1 %}
-                <div class="col-lg-6" style="border: 1px solid black;">
-                     <div  style="margin:0 0 0 30%;">
+                <div class="col-sm-6" style="border: 1px solid black;">
+                     <div style="float:left">
                         {% set imagename = (func2(borrow.product_id)).pic_name %}
                         <img class="resultProductPhoto" src={{url_for('static',filename='images/products/{}'.format(imagename))}} width="180px" height="150px">
                    </div>
-                   <div style="margin:0 0 0 30%;">
+                   <div style="float:right ;margin:5% 15% 0 0;">
                        <p>Start Date:{{ borrow.start_date }}</p>
                        <p>End Date:{{ borrow.end_date }}</p>
                        <p>Borrower Name: {{ (func(borrow.borrower_id)).name }}</p>
                        <p>Product Name: {{ (func2(borrow.product_id)).name }}</p>
                    </div>
                 </div>
+
             {% endif %}
         {% endfor %}
         <br style="clear:both;">
@@ -68,11 +69,11 @@
         {% for borrow in borrows %}
             {% if borrow.approved==0 and borrow.is_active==1 %}
                 <div class="col-lg-6" style="border: 1px solid black;">
-                    <div style="margin:0 0 0 30%;">
+                     <div style="float:left">
                         {% set imagename = (func2(borrow.product_id)).pic_name %}
                         <img class="resultProductPhoto" src={{url_for('static',filename='images/products/{}'.format(imagename))}} width="180px" height="150px">
                     </div>
-                   <div style="margin:0 0 0 30%;">
+                   <div style="float:right ;margin:5% 15% 0 0;">
                        <p>Start Date:{{ borrow.start_date }}</p>
                        <p>End Date:{{ borrow.end_date }}</p>
                        <p>Borrower Name: {{ (func(borrow.borrower_id)).name }}</p>
@@ -89,11 +90,11 @@
         {% for borrow in borrows %}
             {% if borrow.approved==1 and borrow.is_active==0 and not func3(borrow.start_date) %}
                 <div class="col-lg-6" style="border: 1px solid black;">
-                   <div style="margin:0 0 0 30%;">
+                     <div style="float:left">
                        {% set imagename = (func2(borrow.product_id)).pic_name %}
                         <img class="resultProductPhoto" src={{url_for('static',filename='images/products/{}'.format(imagename))}} width="180px" height="150px">
                    </div>
-                   <div style="margin:0 0 0 30%;">
+                   <div style="float:right ;margin:5% 15% 0 0;">
                        <p>Start Date:{{ borrow.start_date }}</p>
                        <p>End Date:{{ borrow.end_date }}</p>
                        <p>Borrower Name: {{ (func(borrow.borrower_id)).name }}</p>
@@ -106,12 +107,12 @@
          <h1 class="homewelcome" style="font-size:30px;text-align:center;">Ended Loans</h1>
         {% for borrow in borrows %}
             {% if borrow.approved==0 and borrow.is_active==0 %}
-                <div class="col-lg-6" style="border: 1px solid black;" >
-                    <div style="margin:0 0 0 30%;">
-                       {% set imagename = (func2(borrow.product_id)).pic_name %}
+                <div class="col-lg-6" style="border: 1px solid black;">
+                     <div style="float:left">
+                         {% set imagename = (func2(borrow.product_id)).pic_name %}
                         <img class="resultProductPhoto" src={{url_for('static',filename='images/products/{}'.format(imagename))}} width="180px" height="150px">
                    </div>
-                   <div style="margin:0 0 0 30%;">
+                   <div style="float:right ;margin:5% 15% 0 0;">
                        <p>Start Date:{{ borrow.start_date }}</p>
                        <p>End Date:{{ borrow.end_date }}</p>
                        <p>Borrower Name: {{ (func(borrow.borrower_id)).name }}</p>
