--- a/project/static/style.css
+++ b/project/static/style.css
@@ -103,7 +103,10 @@ text-align:center;
     max-width:250px;
     max-height:250px;
     }
-
+.profiledesc{
+    font-size: 26px;
+    font-family: 'Optima';
+}
 
 /*product*/
 .flex-container {
@@ -136,12 +139,12 @@ text-align:center;
 }
 .productphoto{
     float:left;
-    margin:10% 0 0 20%;
+    margin:10% 0 0 10%;
     border-style: dotted;
 }
 .productdesc{
-    float:right;
-    margin:10% 15% 0 0;
+    float:left;
+    margin:10% 5% 0 5%;
     font-family: 'Optima';
     font-size:24px;
 }
@@ -205,7 +208,6 @@ text-align:center;
 /* forms*/
 .centerform{
   box-shadow: inset 0 3px 6px rgba(0,0,0,0.16), 0 4px 60px rgba(0,0,0,0.1);
-  border-radius: 50px;
   width:50%;
   margin:auto;
   margin-top:90px;
