path to profile

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -47,6 +47,7 @@
 <!--                                <li><a href="/my_products">My Products</a></li>-->
                                 <li><a href="/borrows">My Borrows</a></li>
                                 <li><a href="/donations">Donation Center</a></li>
+                                <li><a href="/add_product.html">Add Product</a></li>
                                 {% endif %}
                             </ul>
                             <ul class="nav navbar-nav">
