--- a/project/templates/custom_search.html
+++ b/project/templates/custom_search.html
@@ -6,6 +6,8 @@
 <h2 class="headersearch">Search Gmah By City</h2>
 <form action="/searchgmahbycity" method="POST" class="customesearch">
     <input type="search" name="search" id="search" placeholder="Search Anything Here..." class="form-control">
+      <input style="width:30%;" type="submit" class="form-control">
+
 </form>
 
 <h2 class="headersearch">Search Gmah By Category</h2>
@@ -20,8 +22,9 @@
 </form>
 
 <h2 class="headersearch">Search Product</h2>
-<form action="/searchforproduct" method="POST" class="customesearch">
+<form action="/search" method="POST" class="customesearch">
     <input type="search" name="search" id="search" placeholder="Search Anything Here..." class="form-control">
+      <input style="width:30%;" type="submit" class="form-control">
 </form>
 
 </div>
